--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- BUILT WITH LEADPAGES https://www.leadpages.com -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>HOME</title>
+    <title>Dog Training Tips</title>
     <meta name="description" content="">
     <meta property="og:type" content="website">
     <meta property="og:title" content="HOME">
